# litestar-docker

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
src/app/: asgi.py
src/app/config/: app.py  base.py
tests/: conftest.py  test_app.py
