[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "github-actions-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jarod Daming", email = "jmdaming@gmail.com"},
]
dependencies = [
    "litestar[standard]>=2.9.0"
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
app = "app.asgi:create_app"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
]

[tool.pdm.version]
source = "scm"
write_to = "pdm/models/VERSION"

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
includes = ["app/"]
source-includes = ["tests", "typings", "CHANGELOG.md", "LICENSE", "README.md", "tox.ini"]
# editables backend doesn't work well with namespace packages
editable-backend = "path"